--- a/Homework 02/.gitignore
+++ b/Homework 02/.gitignore
@@ -1,7 +1,7 @@
-../.idea/
+.idea/
 .gradle/
 out
-target
+../Homework 02/target
 *.iml
 
 # Compiled class file
@@ -27,3 +27,4 @@ target
 *.rar
 
 
+/.idea/
