Домашнее задание 3 отработаны замечания pr

--- a/Homework 03/src/main/resources/application.yml
+++ b/Homework 03/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
 application:
   questionspath: "i18n/questions.csv"
   maxnumberofquestions: 5
-  locale: Ru
+  locale: ru
 server:
   port: 8090
