--- a/Homework 06/pom.xml
+++ b/Homework 06/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>spring-shell-starter</artifactId>
             <version>2.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
