--- a/Homework 06/src/main/resources/application.yml
+++ b/Homework 06/src/main/resources/application.yml
@@ -2,7 +2,6 @@ spring:
   datasource:
     url: jdbc:h2:mem:bookdb
 
-
   h2:
     console:
       enable: true
@@ -12,8 +11,9 @@ spring:
   sql:
     init:
       mode: always
-
-
+  liquibase:
+    enabled: true
+    contexts: main
   jpa:
     generate-ddl: false
     hibernate:
@@ -22,4 +22,4 @@ spring:
     show-sql: true
     properties:
       hibernate:
-      #format_sql: true
+        format_sql: true
