Homework 08 Работа над ошибками

--- a/Homework 08/src/main/resources/application.yml
+++ b/Homework 08/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
       database: books
 
 mongock:
-  runner-type: "ApplicationRunner" # default
-  #runner-type: "InitializingBean"
+  #runner-type: "ApplicationRunner" # default
+  runner-type: "InitializingBean"
   change-logs-scan-package:
     - ru.otus.spring082022.homework08.mongock
 
